WebKit/mac/Plugins/Hosted/HostedNetscapePluginStream.h
@@ -70,6 +70,8 @@ public:
 
     void cancelLoad(NPReason reason);
 
+    static NPReason reasonForError(NSError* error);
+
 private:
     NSError *errorForReason(NPReason) const;
     void cancelLoad(NSError *);
